updated by prasad.For Survey Integration